[gd_scene load_steps=8 format=3 uid="uid://bdqcch58ny85f"]

[ext_resource type="Script" path="res://Scenes/Menu_Scenes/main_menu.gd" id="1_37p43"]
[ext_resource type="Texture2D" uid="uid://dpyefhmxfkepu" path="res://Assets/UI/MainBGLighter.png" id="2_vrw4o"]
[ext_resource type="Texture2D" uid="uid://b1gcjcf4qbryi" path="res://Assets/UI/button_primary_normal.png" id="2_yvb42"]
[ext_resource type="Theme" uid="uid://dqqmva14h5al4" path="res://Utils/Themes/label.tres" id="3_317em"]
[ext_resource type="Texture2D" uid="uid://c0sayeopluoor" path="res://Assets/UI/button_primary_pressed.png" id="3_wmjq0"]
[ext_resource type="Texture2D" uid="uid://csddr0guntufg" path="res://Assets/UI/button_secondary_normal.png" id="6_3rk8j"]
[ext_resource type="Texture2D" uid="uid://bdfkrs5kpy5j6" path="res://Assets/UI/button_secondary_pressed.png" id="7_i6ofi"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_37p43")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
visible = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="MainBg" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(538, 1082)
scale = Vector2(0.412, 0.4)
texture = ExtResource("2_vrw4o")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainBG" type="TextureRect" parent="UI"]
offset_right = 1080.0
offset_bottom = 1920.0
texture = ExtResource("2_vrw4o")
expand_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -284.5
offset_top = 314.0
offset_right = 284.5
offset_bottom = 422.0
grow_horizontal = 2

[node name="GameNameGulam" type="Label" parent="UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_317em")
theme_type_variation = &"Header"
text = "GULAM "

[node name="GameNameChor" type="Label" parent="UI/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_317em")
theme_type_variation = &"Header"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "CHOR"

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -54.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64

[node name="SingleMode" type="TextureButton" parent="UI/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_yvb42")
texture_pressed = ExtResource("3_wmjq0")

[node name="Label" type="Label" parent="UI/VBoxContainer/SingleMode"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -30.5
offset_right = 162.0
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_317em")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Singleplayer Mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="TextureButton" parent="UI/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_3rk8j")
texture_pressed = ExtResource("7_i6ofi")

[node name="Label" type="Label" parent="UI/VBoxContainer/Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_317em")
text = "Settings"

[node name="MultiplayerMode" type="TextureButton" parent="UI/VBoxContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_yvb42")
texture_pressed = ExtResource("3_wmjq0")

[node name="Label" type="Label" parent="UI/VBoxContainer/MultiplayerMode"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_317em")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Multiplayer Mode"

[node name="Test" type="Label" parent="UI"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -301.0
offset_top = -136.0
offset_right = 301.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_317em")
text = "Hello new Player welcome to game"

[node name="QuitMessage" type="Label" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -208.0
offset_top = -182.0
offset_right = 208.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_317em")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Press back again to Quit"

[node name="QuitTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0

[connection signal="pressed" from="UI/VBoxContainer/SingleMode" to="." method="_on_single_mode_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/MultiplayerMode" to="." method="_on_multiplayer_mode_pressed"]
[connection signal="timeout" from="QuitTimer" to="." method="_on_quit_timer_timeout"]
